adding JWT verification for the /person/{id} endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,12 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 
 # DS properties for the production database (sane defaults)
 %prod.quarkus.hibernate-orm.database.generation=none
+
+
+# JWT configuration
+
+mp.jwt.verify.publickey.location=keys/pub.pem
+mp.jwt.verify.issuer=http://test.signer.cert/issuer
+quarkus.smallrye-jwt.auth-mechanism=MP-JWT
+quarkus.smallrye-jwt.enabled=true
+
