Adding the uber-jar generation property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#Generate a runner JAR. Especifically, an Uber Jar
+quarkus.package.type=uber-jar
+
 # Default DS properties
 quarkus.datasource.db-kind=h2 
 quarkus.datasource.username=sa
@@ -22,3 +25,4 @@ mp.jwt.verify.issuer=http://test.signer.cert/issuer
 quarkus.smallrye-jwt.auth-mechanism=MP-JWT
 quarkus.smallrye-jwt.enabled=true
 
+quarkus.hibernate-orm.sql-load-script=import.sql
